--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -108,7 +108,7 @@
                         <a href="#"><i class="fa fa-group"></i> <span class="nav-label">Colectivo</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li>
-                                <a href="#">Agregar Colectivo<span class="fa arrow"></span></a>
+                                <a href="#">Agregar Colectivo<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li><a href="/sistema/add-health-collective">Salud</a></li>
                                     <li><a href="/sistema/add-vehicle-collective">Vehículo</a></li>
@@ -116,6 +116,13 @@
                                 </ul>
                             </li>
                             <li><a href="/sistema/collectives">Consultar Colectivos</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-file-text-o"></i> <span class="nav-label">Recibo</span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level collapse">
+                            <li><a href="/sistema/add-receipt">Agregar Recibo</a></li>
+                            <li><a href="/sistema/receipts">Consultar Recibos</a></li>
                         </ul>
                     </li>
                     <li>
@@ -138,6 +145,7 @@
                             <li><a href="/sistema/commissions-collected">Comisiones Cobradas</a></li>
                             <li><a href="/sistema/policy-claims">Siniestralidad Póliza</a></li>
                             <li><a href="/sistema/global-loss-ratio">Siniestralidad Global</a></li>
+                            <li><a href="/sistema/pending-payments">Pagos Pendientes</a></li>
                         </ul>
                     </li>
                     <li>
