Arreglos en el codigo 4

--- a/src/views/editExecutive.ejs
+++ b/src/views/editExecutive.ejs
@@ -75,6 +75,7 @@
                                                     <option value="<%= executive.tipo_ejecutivo %>"><%= executive.tipo_ejecutivo %></option>
                                                     <option value="SUSCRIPCIÓN">SUSCRIPCIÓN</option>
                                                     <option value="SINIESTROS">SINIESTROS</option>
+                                                    <option value="COBRANZAS">COBRANZAS</option>
                                                 </select>
                                             </div>
                                         </div>
