--- a/src/views/layouts/footerCollectiveWizardForm.ejs
+++ b/src/views/layouts/footerCollectiveWizardForm.ejs
@@ -360,6 +360,7 @@
                 var premiumMonthly = collective.prima_anual_colectivo / 12;
                 premiumMonthly = premiumMonthly.toFixed(2);
                 document.getElementById("monto_prima_recibo").value = premiumMonthly;
+                document.getElementById("numero_pago_recibo").value = document.getElementById("numero_pago_recibo").value;
             } else if (getSelectValue === 'BIMENSUAL') {
                 var premiumBimonthly = collective.prima_anual_colectivo / 5;
                 premiumBimonthly = premiumBimonthly.toFixed(2);
