--- a/src/views/layouts/footerExtraWizardForm.ejs
+++ b/src/views/layouts/footerExtraWizardForm.ejs
@@ -332,6 +332,7 @@
                 var premiumMonthly = policy.prima_anual_poliza / 12;
                 premiumMonthly = premiumMonthly.toFixed(2);
                 document.getElementById("monto_prima_recibo").value = premiumMonthly;
+                document.getElementById("numero_pago_recibo").value = document.getElementById("numero_pago_recibo").value;
             } else if (getSelectValue === 'BIMENSUAL') {
                 var premiumBimonthly = policy.prima_anual_poliza / 5;
                 premiumBimonthly = premiumBimonthly.toFixed(2);
