--- a/src/views/editOwnAgent.ejs
+++ b/src/views/editOwnAgent.ejs
@@ -27,34 +27,18 @@
                         <div class="col-lg-6">
                             <div class="ibox">
                                 <div class="form-control">
-                                    <% if (ownAgent.rif_agente_propio === '') { %>
-                                        <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula/Rif</label>
-                                            <div class="col-sm-10">
-                                                <input 
-                                                    type="text"
-                                                    name="cedula_agente_propio"
-                                                    id="cedula_agente_propio"
-                                                    value="<%= ownAgent.cedula_agente_propio %>"
-                                                    class="form-control number_format"
-                                                    required
-                                                >
-                                            </div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula</label>
+                                        <div class="col-sm-10">
+                                            <input 
+                                                type="text"
+                                                name="cedula_agente_propio"
+                                                id="cedula_agente_propio"
+                                                value="<%= ownAgent.cedula_agente_propio %>"
+                                                class="form-control number_format"
+                                                required
+                                            >
                                         </div>
-                                    <% } else { %>
-                                        <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula/Rif</label>
-                                            <div class="col-sm-10">
-                                                <input 
-                                                    type="text"
-                                                    name="rif_agente_propio"
-                                                    id="rif_agente_propio"
-                                                    value="<%= ownAgent.rif_agente_propio %>"
-                                                    class="form-control"
-                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
-                                                    required
-                                                >
-                                            </div>
-                                        </div>
-                                    <% } %>
+                                    </div>
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Nombre</label>
                                         <div class="col-sm-10">
