--- a/src/views/executiveForm.ejs
+++ b/src/views/executiveForm.ejs
@@ -75,6 +75,7 @@
                                                     <option value="">Seleccione *</option>
                                                     <option value="SUSCRIPCIÓN">SUSCRIPCIÓN</option>
                                                     <option value="SINIESTROS">SINIESTROS</option>
+                                                    <option value="COBRANZAS">COBRANZAS</option>
                                                 </select>
                                             </div>
                                         </div>
