--- a/src/views/ownAgentForm.ejs
+++ b/src/views/ownAgentForm.ejs
@@ -27,15 +27,14 @@
                         <div class="col-lg-6">
                             <div class="ibox">
                                 <div class="form-control">
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula/Rif</label>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula</label>
                                         <div class="col-sm-10">
                                             <input 
                                                 type="text"
-                                                name="id_rif_agente_propio"
-                                                id="id_rif_agente_propio"
-                                                placeholder="Cédula/Rif *" 
-                                                class="form-control"
-                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
+                                                name="cedula_agente_propio"
+                                                id="cedula_agente_propio"
+                                                placeholder="Cédula de Agente Propio *" 
+                                                class="form-control number_format"
                                                 required
                                             >
                                         </div>
