--- a/src/views/receiptForm.ejs
+++ b/src/views/receiptForm.ejs
@@ -75,6 +75,18 @@
                                                 </select>
                                             </div>
                                         </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha de Pago</label>
+                                            <div class="col-sm-9">
+                                                <input 
+                                                    type="date"
+                                                    name="fecha_pago_recibo"
+                                                    id="fecha_pago_recibo" 
+                                                    class="form-control"
+                                                    required
+                                                >
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Número</label>
@@ -119,19 +131,7 @@
                                             >
                                         </div>
                                     </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Prima</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="text" 
-                                                name="monto_prima_recibo"
-                                                id="monto_prima_recibo"
-                                                placeholder="Monto Prima *" 
-                                                class="form-control number_format"
-                                                required
-                                            >
-                                        </div>
-                                    </div>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -207,6 +207,19 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Prima</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="text" 
+                                                name="monto_prima_recibo"
+                                                id="monto_prima_recibo"
+                                                placeholder="Monto Prima *" 
+                                                class="form-control number_format"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Nombre/Razón</label>
                                         <div class="col-sm-9">
                                             <input 
@@ -233,9 +246,6 @@
                                             >
                                         </div>
                                     </div>
-                                    </br>
-                                    </br>
-                                    </br>
                                 </div>
                             </div>
                         </div>
