--- a/src/views/vehiclePolicyForm.ejs
+++ b/src/views/vehiclePolicyForm.ejs
@@ -630,6 +630,19 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha de Pago</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="date"
+                                                            name="fecha_pago_recibo"
+                                                            id="fecha_pago_recibo" 
+                                                            class="form-control"
+                                                            required
+                                                        >
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                         <% if (typeof(policy) !== 'undefined') { %>
                                             <div class="form-group">
