--- a/src/views/funeralPolicyForm.ejs
+++ b/src/views/funeralPolicyForm.ejs
@@ -392,6 +392,43 @@
                                     </div>
                                 </div>
                             </form>
+                            <div class="wrapper wrapper-content animated fadeInRight">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <div class="ibox ">
+                                            <div class="ibox-title">
+                                                <h5>Beneficiarios</h5>
+                                            </div>
+                                            <div class="ibox-content">
+                                                <div class="table-responsive">
+                                                    <table 
+                                                        class="table table-striped table-bordered table-hover"
+                                                        id="tablaBeneficiarios" 
+                                                    >
+                                                    <thead>
+                                                    <tr>
+                                                        <th>Nombre</th>
+                                                        <th>Apellido</th>
+                                                        <th>Parentesco</th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        
+                                                    </tbody>
+                                                    <tfoot>
+                                                    <tr>
+                                                        <th>Nombre</th>
+                                                        <th>Apellido</th>
+                                                        <th>Parentesco</th>
+                                                    </tr>
+                                                    </tfoot>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </fieldset>
                         <h1><i class="fa fa-file-text-o"></i> Recibo</h1>
                         <fieldset>
